Resolve mac os slidebar jumpin width

--- a/src/selectiontab.css
+++ b/src/selectiontab.css
@@ -155,7 +155,23 @@ input[type="radio"]:checked .radioAccount ~ label{
     padding-top: 0px;
     text-transform: uppercase!important;
 }
-@media (max-width: 1350px){
+@media (min-width: 1200px) and (max-width: 1300px){
+    .box-selection {
+        height: 48px;
+        border-radius: 6px;
+        overflow: hidden;
+        max-width: 330px;
+        width: 100%;
+        display: inline-block;
+        color: var(--warna-black-white-semantic);
+        text-align: center;
+        font-weight: bold;
+        font-size: 10px;
+        padding-top: 0px;
+        text-transform: uppercase!important;
+    }
+}
+@media (min-width: 1301px) and (max-width: 1350px){
     .box-selection {
         height: 48px;
         border-radius: 6px;
